# virtual-world-simulation

./: CMakeLists.txt  README.md  main.cpp
include/: Animal.h  Direction.h  Game.h  Human.h  Organism.h  Plant.h  World.h
include/animal/: Antelope.h  Fox.h  Sheep.h  Turtle.h  Wolf.h
include/exception/: PositionException.h
include/plant/: Belladonna.h  Grass.h  Guarana.h  Hogweed.h  Sonchus.h
includes/: Animal.h  Organism.h  Plant.h
sources/: Animal.cpp
src/: Animal.cpp  Game.cpp  Human.cpp  Organism.cpp  Plant.cpp  World.cpp
src/animal/: Antelope.cpp  Fox.cpp  Sheep.cpp  Turtle.cpp  Wolf.cpp
src/plant/: Belladonna.cpp  Grass.cpp  Guarana.cpp  Hogweed.cpp  Sonchus.cpp
